  object wrapper for this.
  [optilude]

- Expose the `site management folder` aka `++etc++site` or `_components` as a
  tab in the ZMI including the full OFS manage_main functionality.
  [hannosch]

- Added a restricted version of the opaqueItems method for CMFCatalogAware.
  This takes the idea of experimental.opaquespeedup one step further.
  [hannosch]

- Removed the `ResourceRegistries` skin layer. It only contained test code.
  [hannosch]

- Make use of the new IContainer API of object managers and replace objectIds
  and objectValues calls.
  [hannosch]

- Finally removed the interfacePatch for the IContainer interface of
  OFS.ObjectManager after it has been merged upstream.
  [hannosch]

- Removed CMFTopic from our dependency list, it turns out that we aren't
  actually using any of it.
  [hannosch]

- Added proper deprecation warnings for the IBrowserDefault,
  IDynamicViewTypeInformation and ISelectableBrowserDefault interfaces, who
  has always come from Products.CMFDynamicViewFTI.
  [hannosch]

- Deprecate our own IOrderedContainer interface in favor of the original one
  from OFS.
  [hannosch]

- Avoid dependency on the zope.app.zapi package.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- No longer depend on the PageTemplates.GlobalTranslationService but use
  zope.i18n directly.
  [hannosch]

- Merged in more performance optimizations from experimental.contentcreation.
  We don't restrict the permissions for the temporary folder anymore, but
  only care about the permissions of the actual target folder.
  [hannosch]

- Prefer path expressions over Python expressions for persistent expressions.
  [hannosch]

- Fixed the content_status_history form to include the required content table. 
  The old_folder_contents template is gone. 
  [hannosch]

- Fixed the browserDefault tests to use actual traversal to look up views
  for content items instead of relying on Acquisition.
  [hannosch]
